--- a/global-climate/global-climate.html
+++ b/global-climate/global-climate.html
@@ -41,7 +41,7 @@
     </div>
     <div id="content">
       <div id="model">
-        <canvas id="canvas" >Your browser does not support HTML5 Canvas.</canvas>
+        <canvas id="canvas" >Su navegador no soporta HTML5 Canvas.</canvas>
         <div id="layers"></div>
       </div>
       <div id="controls">
@@ -49,14 +49,14 @@
         <div id='co2-graph' class="graph"></div>
         <ul>
           <li>
-            <button id="add-co2-button">Add CO<sub>2</sub></button>
-            <button id="subtract-co2-button">Remove CO<sub>2</sub></button>
+            <button id="add-co2-button">Agregar CO<sub>2</sub></button>
+            <button id="subtract-co2-button">Quitar CO<sub>2</sub></button>
           </li>
           <li>
             <span id="co2-output" class="output digits3"></span>
           </li>
           <li class="output">
-            Temperature: <span id="temperature-output"></span>
+            Temperatura: <span id="temperature-output"></span>
           </li>
         </ul>
         <ul>
@@ -67,14 +67,14 @@
         </ul>
         <ul>
           <li>
-            <label for="sun-brightness-slider">Sun Brightness:</label>
+            <label for="sun-brightness-slider">Brillo del Sol:</label>
             <span class="slider-units">0 <div id="sun-brightness-slider"></div> 200</span>
           </li>
         </ul>
         <ul>
           <li>
-            <button id="add-clouds-button">Add cloud</button>
-            <button id="subtract-clouds-button">Remove cloud</button>
+            <button id="add-clouds-button">Agregar nube</button>
+            <button id="subtract-clouds-button">Quitar nube</button>
           </li>
           <li>
             <span id="co2-output" class="output digits3"></span>
@@ -82,16 +82,16 @@
         </ul>
         <ul>
           <li>
-            <button id="follow-sunray-button" class="follow-agent">Follow energy packet</button>
-            <button id="follow-co2-button" class="follow-agent">Follow CO<sub>2</sub></button>
+            <button id="follow-sunray-button" class="follow-agent">Seguir paquete de energía</button>
+            <button id="follow-co2-button" class="follow-agent">Seguir CO<sub>2</sub></button>
           </li>
         </ul>
         <ul>
           <li>
-            <button id="hide-button">Hide 90% of elements</button>
+            <button id="hide-button">Ocultar 90% de los elementos</button>
           </li>
           <li>
-            <button id="erupt-button">Erupt!</button>
+            <button id="erupt-button">¡Erupción!</button>
           </li>
         </ul>
       </div>
@@ -108,7 +108,7 @@
         <span class="slider-units" title="Change the speed of the model"><img src="img/tortoise.jpg" style="margin-left: -10px;margin-right: -9px;margin-bottom: 4px;width: 36px;"/><div id="speed-slider" style="width:40px;margin:0.7em;margin-left:1em;"></div><img src="img/hare.jpg" style="margin-left: -8px;margin-bottom: 4px;width: 37px;"/></span>
       </div>
       <div id="show-agent-controls">
-        Show:
+        Mostrar:
         <div class="checkbox">
           <input type="checkbox" value="None" id="showGases" name="check" checked/>
           <label for="showGases"></label>
@@ -117,21 +117,21 @@
         <div class="checkbox">
           <input type="checkbox" value="None" id="showRays" name="check" checked/>
           <label for="showRays"></label>
-          <span>Rays</span>
+          <span>Rayos</span>
         </div>
         <div class="checkbox">
           <input type="checkbox" value="None" id="showHeat" name="check" checked/>
           <label for="showHeat"></label>
-          <span>Heat</span>
+          <span>Calor</span>
         </div>
         <div class="checkbox">
           <input type="checkbox" value="None" id="useIREmit" name="check" />
           <label for="useIREmit"></label>
-          <span>IR Emits (doesn't reflect)</span>
+          <span>Emisiones IR (no reflejan)</span>
         </div>
       </div>
       <div id="year-box">
-        Year: <span id="year"></span>
+        Año: <span id="year"></span>
       </div>
     </div>
     <div id="footer">
